k8s/api.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: notes-api
  namespace: devsecops

spec:
  replicas: 1

  selector:
    matchLabels:
      app: notes-api

  template:
    metadata:
      labels:
        app: notes-api

    spec:

      # Pod-level security context
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

        seccompProfile:
          type: RuntimeDefault


      containers:

        - name: notes-api
          image: secure-notes-api:v1
          imagePullPolicy: Never

          ports:
            - containerPort: 5000


          securityContext:

            allowPrivilegeEscalation: false

            readOnlyRootFilesystem: true

            capabilities:
              drop:
                - ALL


          resources:

            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "250m"
              memory: "256Mi"


          readinessProbe:

            httpGet:
              path: /
              port: 5000

            initialDelaySeconds: 5
            periodSeconds: 10


          livenessProbe:

            httpGet:
              path: /
              port: 5000

            initialDelaySeconds: 15
            periodSeconds: 20



---

apiVersion: v1
kind: Service

metadata:
  name: notes-api-service
  namespace: devsecops


spec:

  selector:
    app: notes-api


  ports:

    - port: 5000
      targetPort: 5000


  type: NodePort
